# openshaz

./: .gitignore  DATASET_SOURCES.md  README.md  double.puml  notebook.ipynb  project.puml  pyproject.toml  single.puml
.github/workflows/: CI.yml
assets/: global_schema.excalidraw
config/: Vagrantfile
docker/: .env.example  compose.yaml  docker-compose.yaml
docker/app/api/: Dockerfile  main.py  requirements.txt
docker/app/api/src/: __main__.py
docker/app/api/src/modules/: repository.py
docker/app/worker/: Dockerfile  main.py  pyproject.toml
docker/app/worker/src/: __main__.py
docker/app/worker/src/models/: database.py
docker/app/worker/src/modules/: database.py  dataset.py  parser.py  similarity.py  storage.py
docker/postgres/: Dockerfile  init.sql
docker/postgres/migrations/: 001_add_fma_tracks_table.sql  README.md
docker/prometheus/: prometheus.yml
docker/promtail/: promtail.yml
docker/worker/: Dockerfile  app.py  requirements.txt
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  App.vue.bak  style.css
frontend/src/components/: HelloWorld.vue
frontend/src/router/: index.ts
frontend/src/store/: music.ts
frontend/src/views/: AddMusic.vue  Compare.vue  MusicList.vue  Settings.vue
script/: batch_upload.py  populate_fma_tracks.py  requirements.txt
src/: __main__.py  extraction.py  utils.py
src/models/: audio.py
src/modules/: dataset.py  extraction.py  similarity.py  utils.py
